fix linespacing in base and change style on cards

--- a/base.css
+++ b/base.css
@@ -21,6 +21,11 @@ p, label {
     font-size: 15px;
 }
 
+.linespacing {
+    line-height: 20px;
+
+}
+
 .fetaklassen {
     font-weight: bold;
 }
