--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
       
 main {
@@ -32,28 +33,44 @@ h2 {
     text-align: center;
     padding: 1em;
     margin-bottom: 1em;
+    max-width: 20em;
 }
 
-.card {
+.card1, .card2 {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
 }
-button {
-    padding: 0.5em;
-    margin-top: 1.5em; 
 
-}
 
 @media screen and (min-width: 600px) {
     
     .container__image2 {
-        width: 500px;
+        width: 580px;
         height: 300px; 
     }
     .container__text {
+        max-width: 35em;
+    }
+
+    .card1 .container__text {
+        max-width: 65em;
+        margin: 3em 1.2em 3em 1.2em;
+        text-align:center;
+    }
+
+    .card2 .container__text {
+        max-width: 65em;
+        margin: 3em 1.2em 3em 1.2em;
+        text-align:center;
+    }
+
+    .container__image3 {
+        width: 400px;
+    }
+    .container__image4 {
+        width: 400px;
     }
     
 }
@@ -61,12 +78,46 @@ button {
 @media screen and (min-width: 800px) {
 
         .container__image2 {
-            width: 100%;
+            width: 785px;
             height: 400px;
+        }
 
+        .container__text {
+            max-width: 40em;
+        }
 
-           
+        .container__image3 {
+            width: 370px;
+        }
 
+        .container__image4 {
+            width: 370px;
+        }
+
+        .card1 {
+            display:flex;
+            flex-direction: row-reverse;
+            max-width: 70em;
+            margin: 2em 0em 2em;
+        }
+
+        .card1 .container__text {
+            max-width: 65em;
+            margin: 10em 5em 0em 5em;
+            text-align:center;
+            font-size: 40%;
+        }
+        .card2 {
+            display: flex;
+            flex-direction: row;
+            max-width: 70em;
+        }
+
+        .card2 .container__text {
+            max-width: 65em;
+            margin: 11em 5em 0em 5em;
+            text-align:center;
+            font-size: 40%;
         }
 
     }
